Resolve job list rendering bleeding into footer.

--- a/css/style.css
+++ b/css/style.css
@@ -123,6 +123,14 @@ input[type=text]:hover {
 }
 
 /*CSS Grid to Display Images*/
+#topResult {
+  color: white;
+  font-size: 1.5rem;
+  font-weight: bold;
+  position: relative;
+  left: -10%;
+}
+
 .container p {
   display: grid;
   grid-template-columns: auto auto auto;
@@ -133,6 +141,26 @@ input[type=text]:hover {
 
 .container card {
   background-color: white;
+}
+
+.job-grid {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  gap: 3.5rem;
+  margin-bottom: 10%;
+}
+
+@media (min-width: 320px) {
+  .job-grid {
+    grid-template-columns: repeat(3, 1fr);
+  }
+}
+.card {
+  transition: box-shadow 0.3s;
+}
+
+.card:hover {
+  box-shadow: 0 4px 12px rgba(0, 0, 0, 0.2);
 }
 
 /*Mobile Responsiveness at < 320px*/
